fix margin between sections 2 and 3on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -85,6 +85,7 @@ nav .nav-item p{
 /* Section 2 */
 #section2 {
     padding:0;
+    padding-bottom:1.3rem;
     margin:0;
 }
 
@@ -142,6 +143,7 @@ nav .nav-item p{
     background-size: 1000px 100vh;
     width: auto;
     height: 600px;
+
 
 }
 
